--- a/public/style.css
+++ b/public/style.css
@@ -46,3 +46,11 @@ body {
         color: rgba(255, 255, 255, 0.3);
     }
 }
+
+.chat {
+    background-color: #000000;
+    color: white;
+    width: 300px;
+    margin: 10px;
+    padding: 10px;
+}
